# finops-buddy-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.local.sample  pyproject.toml
.cursor/commands/: opsx-archive.md
.cursor/rules/: env-conventions.mdc  openspec-bandit.mdc  openspec-branch.mdc  openspec-build-artifacts.mdc  openspec-document-settings.mdc  openspec-pip-audit.mdc  openspec-pytest-tests.mdc  openspec-ruff.mdc  openspec-settings-template.mdc  openspec-sync-on-apply.mdc  openspec-version-bump.mdc
.kiro/steering/: env-conventions.md  openspec-bandit.md  openspec-branch.md  openspec-build-artifacts.md  openspec-document-settings.md  openspec-pip-audit.md  openspec-pytest-tests.md  openspec-ruff.md  openspec-settings-template.md  openspec-sync-on-apply.md  (+1 more)
config/: settings.yaml
docs/: ARCHITECTURE.md  CLOUD_CHANGES_WORK_ORDER.md  CONFIGURATION.md  DEPLOY_AWS_ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  MCP.md  README.md  RUNNING.md  build_deploy_architecture_pdf.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
openspec/: config.yaml
tests/: __init__.py  test_agent.py  test_agent_modules.py  test_api.py  test_artifacts.py  test_chart_tools.py  test_chat_cli.py  test_cli.py  test_conversation_printer.py  test_costs.py  test_costs_by_service_and_account.py  test_dates.py  test_demo.py  test_guardrails.py  test_identity.py  test_import.py  test_mcp_loading_notification.py  test_savings_plans_details.py  test_settings.py  test_table.py
(+338 files in other folders)
